<resources>
    <string name="app_name">Leave Management</string>
    <string name="edit_profil">Edit Profile</string>
    <string name="request_leave">Request Leave</string>
    <string name="Leave_history">Leave History</string>
    <string name="leave_balance">Leave Balance</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="submit_request">Submit</string>
    <string name="cancel_request">Cancel</string>
    <string name="days_number">Days Number : 0</string>
    <string name="refresh">Refresh</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="employee_id">Employee ID</string>
    <string name="employees_requests">Employees Requests</string>
    <string name="title_activity_home">Leave Management</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>