<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home"
            />
        <item
            android:id="@+id/request_leave"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/request_leave"/>
        <item
            android:id="@+id/leave_balance"
            android:icon="@drawable/ic_equalizer_black_24dp"
            android:title="@string/leave_balance"/>
        <item
            android:id="@+id/leave_history"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/Leave_history"/>

        <item
            android:id="@+id/employeesRequests"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/employees_requests"
            android:visible="false"/>
    </group>

</menu>
